<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) Azureus Software, Inc, All Rights Reserved.
  ~
  ~ This program is free software; you can redistribute it and/or
  ~ modify it under the terms of the GNU General Public License
  ~ as published by the Free Software Foundation; either version 2
  ~ of the License, or (at your option) any later version.
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program; if not, write to the Free Software
  ~ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
  -->

<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:padding="16dp">

		<com.google.android.material.textfield.TextInputLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="@dimen/profile_setting_spacer"
			android:hint="@string/profile_nickname"
			app:helperText="@string/profile_localnick_explain"
			>

			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/profile_nick"
				android:imeOptions="actionNext"
				android:maxLines="1"
				android:inputType="text"
				android:layout_width="match_parent"
				android:layout_height="wrap_content" />
		</com.google.android.material.textfield.TextInputLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="@dimen/profile_setting_spacer"
			android:background="@drawable/rounded_corner"
			android:orientation="vertical"
			android:padding="10dp">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/core_torrent_service_options"
				android:textAppearance="?android:attr/textAppearanceSmall"/>

			<com.google.android.material.switchmaterial.SwitchMaterial
				android:id="@+id/profile_core_startup"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/profile_setting_spacer"
				android:text="@string/core_auto_start_on_boot"
				app:showText="false"/>

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/core_auto_start_on_boot_desc"
				android:textAppearance="?android:attr/textAppearanceSmall"/>

			<com.google.android.material.switchmaterial.SwitchMaterial
				android:id="@+id/profile_core_onlypluggedin"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/profile_setting_spacer"
				android:text="@string/core_only_transfer_data_when_plugged_in"
				android:visibility="gone"

				app:showText="false"
				tools:visibility="visible"/>

			<com.google.android.material.switchmaterial.SwitchMaterial
				android:id="@+id/profile_core_allowcelldata"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/profile_setting_spacer"

				android:text="@string/core_data_transfer_over_mobile_data_plan"
				android:visibility="gone"
				app:showText="false"
				tools:visibility="visible"/>

			<com.google.android.material.switchmaterial.SwitchMaterial
				android:id="@+id/profile_core_disablesleep"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/profile_setting_spacer"
				android:text="@string/core_disable_wi_fi_sleep_mode_while_transfering_data"
				android:visibility="gone"
				app:showText="false"
				tools:visibility="visible"/>
		</LinearLayout>
	</LinearLayout>

</ScrollView>